--- a/main.css
+++ b/main.css
@@ -1,10 +1,13 @@
 #table_div {
   margin: 0 auto;
   background-color: #cecece;
-  width: 170px;
+  width: 332px;
 }
 tr td {
-  height: 50px;
-  width: 50px;
-  border: 1px solid #fea;
+  height: 100px;
+  width: 100px;
+  border: 3px solid #fea;
+  text-align: center;
+  font-size: 50px;
 }
+
